--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/solid-js": "^5.0.2",
-    "astro": "^5.1.6",
-    "pocketbase": "^0.21.2",
-    "solid-js": "^1.8.17"
+    "@astrojs/solid-js": "^5.0.4",
+    "astro": "^5.1.9",
+    "pocketbase": "^0.21.5",
+    "solid-js": "^1.9.4"
+  },
+  "devDependencies": {
+    "vite": "^4.5.9"
   }
 }
