--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/solid-js": "^5.0.4",
-    "astro": "^5.1.9",
-    "pocketbase": "^0.21.5",
-    "solid-js": "^1.9.4",
-    "swiper": "^11.2.1"
+    "@astrojs/solid-js": "^5.1.1",
+    "astro": "^5.13.7",
+    "pocketbase": "^0.26.2",
+    "solid-js": "^1.9.9",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
-    "vite": "^4.5.9"
+    "terser": "^5.36.0",
+    "vite": "^5.4.11"
   }
 }
