--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "start:server": "node ./dist/server/entry.mjs"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.0",
     "@astrojs/solid-js": "^5.1.3",
     "astro": "^5.15.5",
     "pocketbase": "^0.26.3",
