--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/node": "^9.5.0",
     "@astrojs/solid-js": "^5.1.3",
+    "@astrojs/vercel": "^9.0.0",
     "astro": "^5.15.5",
     "pocketbase": "^0.26.3",
     "solid-js": "^1.9.10",
